src/plugins/felixhayashi/taskgraph/files/layout.scss
.quick-connect {

  &.tc-block-dropdown {
    font-size: 12px;
    right: 50px;
    padding: 5px;
    width: 500px;
    white-space: normal;
    line-height: 1em;
  }
  
  hr {
    color: #d6d9d8;
  }
  
  >button {
    padding-left: 10px;
  }
   
  p p {
    padding: 0px;
  }
  
  .explanation {
    white-space: normal;
  }

}

.tc-modal-wrapper {

  .tc-modal-header {
    padding-top: 0px;
    padding-bottom: 0px;
    
    h3 {
      line-height: 10px;
    }
    
  }

  .tc-modal-footer {
    padding-top: 0px;
    padding-bottom: 0px;
  }
}


$padding : 5px;
$color: #666666;

#node-filter-dialog {

  #filter-tips {
    font-size: 0.8em;
  }

  textarea {
    height: 100px;
    max-height: 300px;
    overflow: auto;
    width: 100%;
    font-size: 11px;
    font-family: "Courier New", Courier, monospace;
  }
        
}

.taskgraph {
  border: 3px dotted lightgray;
  padding: 2px;
  width: calc(100% - 15px);
  color: $color;
  
  &.click-to-use {

    .network-frame {
      
      &:not(.vis-active) {
        cursor: pointer;
        
        &:hover:before {
          box-shadow: 10px 10px 5px lightgray;
          color: gray;
          background: white;
          content: "Click to use";
          font-size: 18px;
          font-weight: bold;
          left: 50%;
          margin-left: -100px;
          position: absolute;
          text-align: center;
          top: 50px;
          width: 200px;
          z-index: 2000;
          padding: 5px;
        }
      }
    }
  }

  .network-manipulationUI.edit.editmode {
    height: 26px;
  }
  
  .network-manipulationDiv {
    background: transparent;
    padding: 3px 0;
    height: 35px;
  }
  
  .filterbar {
    
    background: #d6d9d8;
    border-bottom: 1px solid lightgray;
    padding: 1px $padding;
    
    .tc-drop-down {
        background-color: #F3F3F3;
        border: none;
        min-width: 170px;
        padding: $padding;
        margin: 5px 0;
        
        button {
          padding : 0px;
        }
    }
    
    [hidden] {
      display: none;
    }
    
    .tc-block-dropdown {
      width: 370px;
      min-width: 370px;
      padding: $padding;
      margin: 15px 0 0 -370px;
              
        a {
          display: inline;
          padding : 0px;
        }
      
    }
    
    button {
      line-height: inherit;
      color: $color;
    }
  
     > * {
      display: inline-block; // TODO: this is too rigorous
    }
    
    .separator:after {
      color: lightgray;
      margin: 3px;
      content: " | ";
    }
    
    .quickhelp {
      background: transparent;
      border: none;
      border-left: 1px solid #cccccc;
      color: slategrey;
      float: right;
      font-weight: bold;
      margin: $padding+1;
    }
    
    .tc-edit-add-tag .tc-add-tag-name input {
      width: 70%;
    }
    
    .tc-sidebar-header {
      text-shadow: none;
    }
    
    .tc-edit-tags {
      border: none;
      padding: inherit;
      box-shadow: none;
    }
  }
  
}

